--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,4 @@
 {
-<<<<<<< HEAD
   "name": "chatbot",
   "private": true,
   "version": "0.0.0",
@@ -16,7 +15,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-type-animation": "^3.2.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "dotenv": "^17.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -28,9 +28,5 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.0.4"
-=======
-  "dependencies": {
-    "dotenv": "^17.0.1"
->>>>>>> ad4878b5decbceb621ddf5f2696763e46d5afae4
   }
 }
